prevent ET logo on mobile from extending outside the screen

--- a/pluri/quiz/style.css
+++ b/pluri/quiz/style.css
@@ -16,6 +16,12 @@ a {
     color: inherit;
 }
 
+img {
+    display: block;
+
+    max-width: 100%;
+}
+
 .quiz {
     display: flex;
     flex-direction: column;
@@ -197,7 +203,7 @@ body:has(.flags) {
     /* transition: 0.5s; */
 }
 
-@media (max-width: 1050px) {
+@media (max-width: 1024px) {
     body:has(.flags) {
         overflow: auto;
         overflow-x: hidden;
@@ -279,7 +285,7 @@ body:has(.flags) {
     text-align: center;
 }
 
-@media (max-width: 1050px) {
+@media (max-width: 1024px) {
     .logo {
         position: relative;
         top: 0;
